fix: quality gate